[gd_scene load_steps=19 format=2]

[ext_resource path="res://fonts/Open_Sans/OpenSans-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://GameCenter/GameCenter.tscn" type="PackedScene" id=2]
[ext_resource path="res://GameLayout/PointsGainedDisplayer.tscn" type="PackedScene" id=3]
[ext_resource path="res://GameLayout/GameLayout.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
size = 52
outline_size = 1
outline_color = Color( 0.466667, 0.431373, 0.396078, 1 )
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 30
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 30
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=6]
size = 17
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.913725, 0.72549, 0.160784, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
shadow_color = Color( 1, 0.984314, 0, 0.6 )
shadow_size = 5
shadow_offset = Vector2( 1, 1 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.913725, 0.72549, 0.160784, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=9]
content_margin_left = 9.0
content_margin_right = 9.0
bg_color = Color( 0.741176, 0.588235, 0.129412, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
shadow_color = Color( 0.690196, 0.678431, 0.678431, 0.6 )

[sub_resource type="DynamicFont" id=10]
size = 17
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0.913725, 0.72549, 0.160784, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
shadow_color = Color( 1, 0.984314, 0, 0.6 )
shadow_size = 5
shadow_offset = Vector2( 1, 1 )

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0.913725, 0.72549, 0.160784, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=13]
content_margin_left = 9.0
content_margin_right = 9.0
bg_color = Color( 0.741176, 0.588235, 0.129412, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
shadow_color = Color( 0.690196, 0.678431, 0.678431, 0.6 )

[sub_resource type="DynamicFont" id=14]
size = 17
use_filter = true
font_data = ExtResource( 1 )

[node name="Screen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PointsGainedDisplayer" parent="." instance=ExtResource( 3 )]
margin_right = 148.0
margin_bottom = 67.0

[node name="ScreenBG" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.980392, 0.972549, 0.937255, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScreenMargin" type="MarginContainer" parent="ScreenBG"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_vertical = 3
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScreenVBox" type="VBoxContainer" parent="ScreenBG/ScreenMargin"]
margin_left = 20.0
margin_top = 20.0
margin_right = 430.0
margin_bottom = 580.0
size_flags_vertical = 3
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HeaderHBox" type="HBoxContainer" parent="ScreenBG/ScreenMargin/ScreenVBox"]
margin_right = 410.0
margin_bottom = 72.0

[node name="2048HeaderLabel" type="Label" parent="ScreenBG/ScreenMargin/ScreenVBox/HeaderHBox"]
margin_right = 156.0
margin_bottom = 72.0
size_flags_horizontal = 3
size_flags_vertical = 6
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.466667, 0.431373, 0.396078, 1 )
text = "2048"
valign = 1

[node name="ScoresHBox" type="HBoxContainer" parent="ScreenBG/ScreenMargin/ScreenVBox/HeaderHBox"]
margin_left = 160.0
margin_right = 410.0
margin_bottom = 72.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 10

[node name="ScoreBG" type="ColorRect" parent="ScreenBG/ScreenMargin/ScreenVBox/HeaderHBox/ScoresHBox"]
margin_right = 120.0
margin_bottom = 72.0
rect_min_size = Vector2( 120, 0 )
color = Color( 0.733333, 0.678431, 0.627451, 1 )

[node name="ScoreVBox" type="VBoxContainer" parent="ScreenBG/ScreenMargin/ScreenVBox/HeaderHBox/ScoresHBox/ScoreBG"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreTextLabel" type="Label" parent="ScreenBG/ScreenMargin/ScreenVBox/HeaderHBox/ScoresHBox/ScoreBG/ScoreVBox"]
margin_right = 120.0
margin_bottom = 23.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.92549, 0.894118, 0.85098, 1 )
text = "Pontuação"
align = 1
valign = 1

[node name="ScoreValueLabel" type="Label" parent="ScreenBG/ScreenMargin/ScreenVBox/HeaderHBox/ScoresHBox/ScoreBG/ScoreVBox"]
margin_top = 27.0
margin_right = 120.0
margin_bottom = 69.0
custom_fonts/font = SubResource( 3 )
text = "0"
align = 1
valign = 1

[node name="HighScoreBG" type="ColorRect" parent="ScreenBG/ScreenMargin/ScreenVBox/HeaderHBox/ScoresHBox"]
margin_left = 130.0
margin_right = 250.0
margin_bottom = 72.0
rect_min_size = Vector2( 120, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.733333, 0.678431, 0.627451, 1 )

[node name="HighScoreVBox" type="VBoxContainer" parent="ScreenBG/ScreenMargin/ScreenVBox/HeaderHBox/ScoresHBox/HighScoreBG"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HighScoreTextLabel" type="Label" parent="ScreenBG/ScreenMargin/ScreenVBox/HeaderHBox/ScoresHBox/HighScoreBG/HighScoreVBox"]
margin_right = 120.0
margin_bottom = 23.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.92549, 0.894118, 0.85098, 1 )
text = "Recorde"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HighScoreValueLabel" type="Label" parent="ScreenBG/ScreenMargin/ScreenVBox/HeaderHBox/ScoresHBox/HighScoreBG/HighScoreVBox"]
margin_top = 27.0
margin_right = 120.0
margin_bottom = 69.0
custom_fonts/font = SubResource( 5 )
text = "10500"
align = 1
valign = 1

[node name="Header2HBox" type="HBoxContainer" parent="ScreenBG/ScreenMargin/ScreenVBox"]
margin_top = 92.0
margin_right = 410.0
margin_bottom = 116.0
custom_constants/separation = 5
alignment = 1

[node name="ChalengeLabel" type="Label" parent="ScreenBG/ScreenMargin/ScreenVBox/Header2HBox"]
margin_right = 240.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0.466667, 0.392157, 0.2, 1 )
text = "Junte as peças. Alcance 2048!"
valign = 1

[node name="MenuButton" type="Button" parent="ScreenBG/ScreenMargin/ScreenVBox/Header2HBox"]
margin_left = 245.0
margin_right = 308.0
margin_bottom = 24.0
size_flags_vertical = 3
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 8 )
custom_styles/normal = SubResource( 9 )
custom_fonts/font = SubResource( 10 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "Menu"

[node name="NewGameButton" type="Button" parent="ScreenBG/ScreenMargin/ScreenVBox/Header2HBox"]
margin_left = 313.0
margin_right = 410.0
margin_bottom = 24.0
size_flags_vertical = 3
custom_styles/hover = SubResource( 11 )
custom_styles/pressed = SubResource( 12 )
custom_styles/normal = SubResource( 13 )
custom_fonts/font = SubResource( 14 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "Novo jogo"

[node name="GameCenter" parent="ScreenBG/ScreenMargin/ScreenVBox" instance=ExtResource( 2 )]

[node name="AcceptDialog" type="AcceptDialog" parent="ScreenBG/ScreenMargin/ScreenVBox"]
margin_top = 566.0
margin_right = 410.0
margin_bottom = 766.0
rect_min_size = Vector2( 200, 200 )
dialog_text = "Se você sair, seu progresso será perdido."
dialog_autowrap = true
[connection signal="pressed" from="ScreenBG/ScreenMargin/ScreenVBox/Header2HBox/MenuButton" to="." method="_on_MenuButton_pressed"]
[connection signal="pressed" from="ScreenBG/ScreenMargin/ScreenVBox/Header2HBox/NewGameButton" to="." method="_on_NewGameButton_pressed"]
[connection signal="confirmed" from="ScreenBG/ScreenMargin/ScreenVBox/AcceptDialog" to="ScreenBG/ScreenMargin/ScreenVBox/GameCenter" method="new_game"]
